[package]
name = "tokio-learn"
version = "0.1.0"
authors = ["sunben <sunben.96@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "0.2", features = ["full"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "net", "io-util", "stream"] }
futures = "0.3"

